@@ -1,3 +1,9 @@
+2012-03-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCcse.h,
+	  src/SDCCcse.c: handle possible pointer aliasing more conservatively
+	* src/z80/gen.c (genFunction): reset stack.pushed at function start too
+
 2012-03-22 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/gcc-torture-execute-941021-1.c:
